@@ -12,5 +12,4 @@ importFrom(foreach,getDoParWorkers)
 importFrom(parallel,mclapply)
 importFrom(plyr,count)
 importFrom(plyr,ddply)
-importFrom(reshape2,melt)
 importFrom(stats,p.adjust)
